# Morsalyzer

./: CMakeLists.txt  README.md
resource/: myplugineditor.uidesc  win32resource.aps
source/: myplugincids.h  myplugincontroller.cpp  myplugincontroller.h  mypluginentry.cpp  mypluginprocessor.cpp  mypluginprocessor.h  uimessagecontroller.h  version.h
